deleted column from 143r with latin, changed welsh l's

--- a/transcriptions/for_testing/r_3_2/141r.md
+++ b/transcriptions/for_testing/r_3_2/141r.md
@@ -96,7 +96,7 @@ youre hole counseil I beseche
 what is my beste as for an ende  
 My sone vnto þe trouþe wende.  
 Now wol I for þe loue of þe  
-And lete all oþre trifles be  
+And lete aỻ oþre trifles be  
 The more þat þe nede is hih  
 The more it nedeþ to be slih.  
 To him which haþ þe nede on honde  
