--- a/transcriptions/for_testing/r_3_2/142v.md
+++ b/transcriptions/for_testing/r_3_2/142v.md
@@ -70,11 +70,11 @@ On my message and forþ he wente
 To Venus for to wite hir wille  
 And I bood in þe place stille  
 And was þer but alitel while  
-nought full þe mountance of a myle  
+nought fuỻ þe mountance of a myle  
 whan I behield and sodeinly  
 I sigh wher Venus stood me by   
 So as I mighte vndir a tree  
-To grounde I fell vpon my kne  
+To grounde I feỻ vpon my kne  
 And preide hir for to do me g̈ce  
 Sche caste hire chier vppon my face  
 And as it were haluyng againe  
