--- a/transcriptions/for_testing/r_3_2/143r.md
+++ b/transcriptions/for_testing/r_3_2/143r.md
@@ -6,45 +6,7 @@ author: Jenna Schoen
 - [x] Transcribed
 - [x] Double checked
 
-Column 1:
-
-ffor al on liche of gentil loue  
-My court stant all courtes aboue  
-and takþ nought in to retenue  
-But þing which is to kinde due  
-ffor elles it schal be refused  
-wher of I holde þe excused  
-ffor it is many daies gon  
-That þou amōges hem were on  
-which of my court hast ben wiþholde  
-So þat þe more I am beholde  
-Of þy desese to cōmune  
-And to remewe þat fortune  
-which manye daies haþ be greued  
-But if my counseil may be leued  
-þou schalt ben eased er þou go   
-Of þilke vnsely iolif wo  
-wher of þou seist þin herte is fired  
-But as of þat þou hast desired  
-Aftir þe sentence of þy bille  
-þou most þ̉of don at my wille  
-And I þerof me wole auyse  
-ffor be þou hool it schal suffise  
-nought al as þou desire woldest  
-But so as þou be resōn scholdest  
-[skipped Latin lines]
-Venus which stant wiþoute lawe  
-In no certein but as men drawe   
-Of Raggemā vpon þe chānce  
-Sche leiþ no peis in þe balānce  
-But as hire likeþ for to weie  
-þe trewe man fulofte aweie  
-Sche put. which haþ hire grace bede  
-and set an vntrewe in his stede  
-lo þus blindly þe world sche demeþ  
-In loues cause as to me semeþ  
-I not what oþre mē wolde sein  
-But i algate am so besein  
+[deleted column 1 cause latin ]
 
 Column 2:
 
