changed another welsh l

--- a/transcriptions/for_testing/r_3_2/143r.md
+++ b/transcriptions/for_testing/r_3_2/143r.md
@@ -28,7 +28,7 @@ My loue lust. and lokkes hore
 In chambre acorden neủe more  
 and þough þou feigne a yong corrage  
 It scheweþ wel be þe visage  
-þat olde Grisell is no fole  
+þat olde Griseỻ is no fole  
 Ther ben ful many yeeres stole  
 wiþ þe and suche oþre mo  
 þat outward feignen youthe so  
