changed welsh l in cc_198 for testing

--- a/transcriptions/for_testing/cc_198/160v.md
+++ b/transcriptions/for_testing/cc_198/160v.md
@@ -13,7 +13,7 @@ Til þat þis knight of which I spak of þus
 Schope him to gon and dwelle a ȝeer or tweyne  
 In engelond þat cleped eek was bretayne  
 To seche in armes worschipe and eek honõ  
-ffor all his lust he sette in such labour  
+ffor aỻ his lust he sette in such labour  
 And dwelleþ þere þe book saiþ þus  
 Now wol I stynte of þis arneragus  
 And speken I wole of dorygen his wijf  
@@ -22,14 +22,14 @@ And for his absens wepeþ sche and sikeþ
 As don þese noble wyues when hem likeþ  
 Sche mourneþ wakeþ wayleþ fasteþ ⁊ pleyneþ  
 Desire of his p̉sence hire so destreyneþ  
-That all þis wyde world sche sette at nouȝt  
+That aỻ þis wyde world sche sette at nouȝt  
 hire freendes which þat knewe hire heuy þouȝt  
 Conforted hire in al þat euer þey mighte or may
 They prechen hire þay tellen hire night and day  
 þat causeles sche sleeþ hire self allas  
 And eủy confort possible in þis cas  
-þey don to hire wiþ all here busynes  
-And all to make hire lete hir heuynes  
+þey don to hire wiþ aỻ here busynes  
+And aỻ to make hire lete hir heuynes  
 By ꝓcesse as ȝe knowe wel eủychon  
 Men may so longe grauen in þe ston  
 Til som figure þ̉inne enprentyd be  
