--- a/transcriptions/for_testing/cc_198/161v.md
+++ b/transcriptions/for_testing/cc_198/161v.md
@@ -20,7 +20,7 @@ Though I ne can þe causes for soþe knowe
 but þilke god þat made wynd to blowe  
 as kepe my lord þis is my conclusion̄  
 To clerkes lete I al disputacion̄  
-But wolde god þat all þe rokkes blake  
+But wolde god þat aỻ þe rokkes blake  
 were sonken in to helle for his sake  
 There rokkes sleen mȳ herte for feere  
 Thus wolde sche sayn with many a pitous teere  
