--- a/transcriptions/for_testing/cc_198/163r.md
+++ b/transcriptions/for_testing/cc_198/163r.md
@@ -14,7 +14,7 @@ Aurely qd sche by hihe god aboue
 ȝit wol I günte ȝou to be ȝoure loue  
 Seþyns I ȝou se so pitously compleyne  
 loke what day þat engelond is Bryteyne  
-ȝe remewe all þe rokkes ston by stoon  
+ȝe remewe aỻ þe rokkes ston by stoon  
 þat þay ne lette schip ne boot to goon  
 I say whan ȝe han made þere costes so clene  
 Of Rokkes þat þer nys no ston y sene  
