--- a/transcriptions/for_testing/cc_198/164v.md
+++ b/transcriptions/for_testing/cc_198/164v.md
@@ -30,7 +30,7 @@ And wel ȝe knowen þat a sore sauure
 In surgerie ful ꝑilous is þe cure  
 But man might touche þe arwe or come þ̉by  
 his broþ̉ wepeþ and wayleþ priuyly  
-Til atte laste him fell in remembünce  
+Til atte laste him feỻ in remembünce  
 That whiles he was at Orlyaunce in ffünce  
 As ȝonge clerkes þat ben likerous  
 To reden artes þat ben curious  
